grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    log_statement: $ => seq(
      'log',
      $._expressions,
    ),

    pass_statement: _ => prec.left('pass'),
    function_definition: $ => seq(
      optional('async'),
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    event_definition: $ => seq(
      'event',
      field('name', $.identifier),
      ':',
      field('body', $.event_body),
    ),

    event_body: $ => seq(
      $._newline,
      $._indent,
      choice(
        repeat1(seq($.event_member, $._newline)),
        $.pass_statement,
      ),
      $._dedent,
    ),

    event_member: $ => seq(
      field('name', $.identifier),
      ':',
      choice(
        seq('indexed', '(', $.type, ')'),
        $.type,
      ),
    ),

    struct_definition: $ => seq(
      'struct',
      field('name', $.identifier),
      ':',
      field('body', $.struct_body),
    ),

    struct_body: $ => seq(
      $._newline,
      $._indent,
      repeat1(seq($.struct_member, $._newline)),
      $._dedent,
    ),

    struct_member: $ => seq(
      field('name', $.identifier),
      ':',
      $.type,
    ),

    interface_definition: $ => seq(
      'interface',
      field('name', $.identifier),
      ':',
      field('body', $.interface_body),
    ),

    interface_body: $ => seq(
      $._newline,
      $._indent,
      repeat1(seq($.interface_sig, $._newline)),
      $._dedent,
    ),

    interface_sig: $ => seq(
      'def',
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $.type))),
      ':',
      field('mutability', $.identifier),
    ),

    enum_definition: $ => seq(
      'enum',
      field('name', $.identifier),
      ':',
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      $._newline,
      $._indent,
      repeat1(seq($.enum_member, $._newline)),
      $._dedent,
    ),

    enum_member: $ => seq(
      field('name', $.identifier),
    ),

    flag_definition: $ => seq(
      'flag',
      field('name', $.identifier),
      ':',
      field('body', $.flag_body),
    ),

    flag_body: $ => seq(
      $._newline,
      $._indent,
      repeat1(seq($.flag_member, $._newline)),
      $._dedent,
    ),

    flag_member: $ => seq(
      field('name', $.identifier),
    ),

    implements_def: $ => seq(
      'implements',
      ':',
      field('name', $.identifier),
    ),

    exports_decl: $ => seq(
      'exports',
      ':',
      commaSep1($.expression),
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    decorated_definition: $ => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.class_definition,
        $.function_definition,
      )),
    ),

    decorator: $ => seq(
      '@',
      $.expression,
      $._newline,
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),
    tuple: $ => seq(
      '(',
      optional($._collection_elements),
      ')',
    ),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
