test/corpus/vyper_call.txt
================================================================================
 Extcall Function Call
================================================================================

extcall owner.transfer(to, value)

--------------------------------------------------------------------------------

(module
  (external_call
    (call
      function: (attribute
        object: (identifier)
        attribute: (identifier))
      arguments: (argument_list
        (identifier)
        (identifier)))))

================================================================================
 Staticcall Function Call
================================================================================

staticcall target.get_value()

--------------------------------------------------------------------------------

(module
  (external_call
    (call
      function: (attribute
        object: (identifier)
        attribute: (identifier))
      arguments: (argument_list))))

================================================================================
 Extcall on Attribute
================================================================================

extcall proxy_impl.implementation()

--------------------------------------------------------------------------------

(module
  (external_call
    (call
      function: (attribute
        object: (identifier)
        attribute: (identifier))
      arguments: (argument_list))))
