test/corpus/vyper_interfaces.txt
================================================================================
 Interface Definition
================================================================================

interface IVault:
    def deposit() -> uint256: view
    def withdraw(amount: uint256): nonpayable

--------------------------------------------------------------------------------

(module
  (interface_definition
    name: (identifier)
    body: (interface_body
      (interface_sig
        name: (identifier)
        parameters: (parameters)
        return_type: (type
          (identifier))
        mutability: (identifier))
      (interface_sig
        name: (identifier)
        parameters: (parameters
          (typed_parameter
            (identifier)
            type: (type
              (identifier))))
        mutability: (identifier)))))

================================================================================
 Implements Declaration
================================================================================

implements: IVault

--------------------------------------------------------------------------------

(module
  (implements_def
    name: (identifier)))
