test/corpus/vyper_modules.txt
================================================================================
 Exports Declaration
================================================================================

exports: foo, bar.baz, (x, y)

--------------------------------------------------------------------------------

(module
  (exports_decl
    (identifier)
    (attribute
      object: (identifier)
      attribute: (identifier))
    (tuple
      (identifier)
      (identifier))))
